Refactor dragging elements (Issue #12)